--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -17,5 +17,6 @@
     "ora": "^4.0.3",
     "recursive-copy": "^2.0.10",
     "yargs": "^15.3.1"
-  }
+  },
+  "gitHead": "a7e4cef98b2ed7b818262dd675d6b7c9fb5579a8"
 }
