--- a/packages/create/plicity-template/plicity.env
+++ b/packages/create/plicity-template/plicity.env
@@ -2,10 +2,12 @@ PLICITY_OPENSHIFT_URL=
 PLICITY_OPENSHIFT_TOKEN=
 PLICITY_OPENSHIFT_PROJECT=
 
+PLICITY_DOCKERFILE_DIR=.plicity
+
 PLICITY_GITLAB_HOST=
 PLICITY_GITLAB_TOKEN=
 PLICITY_GITLAB_PROJECT_ID=
 
-PLICITY_NAME=
+PLICITY_NAME=pli-app
 PLICITY_LOG_LEVEL=debug
 PLICITY_LOG_PRETTY=true
