--- a/packages/operator/package.json
+++ b/packages/operator/package.json
@@ -50,6 +50,7 @@
     "pino": "^5.17.0",
     "pino-pretty": "^3.6.1",
     "tar-stream": "^2.1.1",
+    "verror": "^1.10.0",
     "yargs": "^15.1.0"
   },
   "gitHead": "a7e4cef98b2ed7b818262dd675d6b7c9fb5579a8"
